--- a/kubernetes-manifests/nginx-ingress-controller.yaml
+++ b/kubernetes-manifests/nginx-ingress-controller.yaml
@@ -1,21 +1,8 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: ingress-nginx
----
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: nginx-ingress-serviceaccount
-  namespace: ingress-nginx
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-ingress-controller
   namespace: ingress-nginx
-  labels:
-    app: nginx-ingress
 spec:
   replicas: 1
   selector:
@@ -27,6 +14,7 @@ spec:
         app: nginx-ingress
     spec:
       serviceAccountName: nginx-ingress-serviceaccount
+      automountServiceAccountToken: false   # Add this line
       containers:
         - name: nginx-ingress-controller
           image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.47.0
@@ -51,6 +39,13 @@ spec:
               containerPort: 80
             - name: https
               containerPort: 443
+          resources:
+            limits:
+              cpu: 100m   # Specify CPU limit
+              memory: 256Mi   # Specify memory limit
+            requests:
+              cpu: 50m   # Specify CPU request
+              memory: 128Mi   # Specify memory request
           readinessProbe:
             httpGet:
               path: /healthz
